# ChatRoom

./: .gitignore
ChatClient/: CMakeLists.txt  graphicmanager.cpp  graphicmanager.h  main.cpp  res.qrc
ChatClient/chat/: accountpage.h  chatpage.cpp  chatpage.h  friendchatdelegate.h  friendpage.cpp  mainwindow.cpp  mainwindow.h  messageitemwidget.cpp
ChatClient/component/: applicationfeaturebar.cpp  applicationfeaturebar.h  applicationtitlebar.cpp  buttoncomponent.h  lineeditcomponent.cpp  normaltitlebar.cpp  normaltitlebar.h
ChatClient/framelesswindow/: framelesswindow.cpp
ChatClient/login/: baselogindialog.cpp  baselogindialog.h  logindialog.cpp  logindialog.h  registerdialog.cpp  registerdialog.h
chat-client/: CMakeLists.txt  global.h  graphicmanager.cpp  graphicmanager.h  main.cpp  statemanager.cpp  statemanager.h
chat-client/chat/: accountpage.h  chatpage.cpp  chatpage.h  chatwindow.cpp  chatwindow.h  defaultwindow.cpp  defaultwindow.h  friendchatdelegate.cpp  friendchatdelegate.h  friendchatlist.cpp  friendchatlist.h  friendpage.cpp  friendpage.h  mainwindow.cpp  mainwindow.h  messageitemwidget.cpp  messageitemwidget.h  systemnotification.cpp  systemnotification.h
chat-client/component/: applicationfeaturebar.cpp  applicationfeaturebar.h  applicationtitlebar.cpp  applicationtitlebar.h  buttoncomponent.h  iconwithredpoint.cpp  iconwithredpoint.h  imagecontainer.cpp  imagecontainer.h  lineeditcomponent.h  normaltitlebar.cpp  normaltitlebar.h  notification.cpp  notification.h  passwordcomponent.h
chat-client/login/: baselogindialog.cpp  baselogindialog.h  logindialog.cpp  logindialog.h  registerdialog.cpp  registerdialog.h
chat-server/: CMakeLists.txt  readme.md
chat-server/examples/: CMakeLists.txt  test_json.cpp  test_muduo.cpp
chat_client/chat/: accountpage.cpp  chatwindow.cpp  friendchatdelegate.cpp  friendchatlist.cpp  friendchatlist.h  friendpage.h  messageitemwidget.h
chat_client/component/: applicationtitlebar.cpp  applicationtitlebar.h  buttoncomponent.cpp  iconwithredpoint.cpp  lineeditcomponent.h  normaltitlebar.h  notification.cpp  notification.h  passwordcomponent.cpp  passwordcomponent.h
chat_client/framelesswindow/: framelesswindow.cpp  framelesswindow.h
chat_client/login/: baselogindialog.h  registerdialog.cpp
